[package]
name = "waseda-moodle"
version = "0.1.0"
authors = ["mkihr-ojisan <52490041+mkihr-ojisan@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A simple crate to get a list of the enrolled courses"
repository = "https://github.com/mkihr-ojisan/waseda-moodle"
readme = "README.md"
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10.4", features = ["cookies", "rustls-tls"] }
failure = "0.1.8"
html-extractor = "0.4.0"
serde = { version = "1.0.110" }
serde_json = "1.0.53"
